Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for 1.RC4 [2004-12-19] #13059
=====================================

 o Fixed release zip to run with JDK 1.3 without recompilation

 o #13057 Added SSL property 'findStoreInXmlBlasterSearchPath' to support keyStore/trustStore lookup in CLASSPATH
   Client side only, JDK 1.4 or above only
   The feature is currently commented out to have JDK 1.3 compatibility, see SocketUrl.java:367

 o C client library:
   - #13048 Added XMLBLASTER_ prefix to LOG_INFO, LOG_WARN ... to avoid
     namespace clash with syslog.h; Thanks to David Kerry

 o C++ client library:
   - #13045 BUGFIX for SAX parsing of ClientProperties: encoding of received message was ignored

 o #13043 SOCKET SSL communication: Added property 'needClientAuth' to support
   authentication of connecting clients as well, see
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/protocol.socket.html#SSL2

 o #13038 jutils-logging Fixed synchronization gap when making log-backup files

 o #13035 FilePoller final release

 o #13033 Fixed xmlBlasterPlugins.xml SAX parse to
   - allow sub-tags as attribute value
   - support inner CDATA sections in attribute markup


Changes for 1.RC3 [2004-12-08] #12997
=====================================

 o #13013 Added filepoller plugin to retrieve and publish files from a directory

 o #13013 Added getter in Global for properties when mixed with plugin properties

 o #13013 Added I_PluginConfig interface 

 o #12995 Changed subscription ID to be unique over time

 o #12988 BUGFIX in script: CDATA in content are not passed through anymore and duplication of 
   content does not happen anymore 

 o C client library:
   - #12985 Added XMLBLASTER_NO_RCSID switch for broken svnversion/rcsid workaround

 o C++ client library:
   - #12985 Added XMLBLASTER_NO_RCSID switch for broken svnversion/rcsid workaround