@@ -621,6 +621,18 @@ TODO
       <copy file="${config.dir}/xmlBlasterPlugins.xml.template" tofile="${build.dest}/xmlBlasterPlugins.xml" filtering="true"/>
       <copy verbose="true" file="${soap.dir}/service.xml" tofile="${build.dest}/service.xml"/>
 
+      <switch value="${need.JDK.14}">
+         <case value="true"> <!-- compiles/runs with JDK >= 1.4 only -->
+            <echo message="Compiling socket protocol driver to JDK 1.4 or above only"/>
+            <echo message="${src.java.dir}/org/xmlBlaster/protocol/socket/SocketUrl.java.1.4 -> ${build.src}/xmlBlaster/org/xmlBlaster/protocol/socket/SocketUrl.java"/>
+            <copy file="${src.java.dir}/org/xmlBlaster/protocol/socket/SocketUrl.java.1.4"
+                  tofile="${build.src}/xmlBlaster/org/xmlBlaster/protocol/socket/SocketUrl.java" overwrite="true"/>
+         </case>
+         <default> <!-- Supports JDK 1.3 -->
+            <echo message="Compiling socket protocol driver to JDK 1.3 or above"/>
+         </default>
+      </switch>
+
       <javac srcdir="${build.src}/xmlBlaster"
             destdir="${build.dest}"
             classpath="${cp}"
